app/main/default/objects/Opportunity/fields/MainCompetitors__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>