app/main/default/objects/Opportunity/fields/TrackingNumber__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>