app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
</CustomObject>