app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
</CustomObject>